Fix scrolling on mobile for custom pages

--- a/frontend/app/styles/_modules.scss
+++ b/frontend/app/styles/_modules.scss
@@ -595,6 +595,12 @@ $graph-page-header-height: 52px;
 //
 // Custom pages
 //
+.xd-custom-page {
+	#page-content > div {
+		overflow: hidden;
+	}
+}
+
 .xd-custom-page-header {
 	background: $body-bg;
 	padding-bottom: 0;
@@ -627,9 +633,11 @@ $graph-page-header-height: 52px;
 }
 
 .xd-custom-page-content {
-	margin-top: 130px;
+	padding-top: 130px;
+	height: 100%;
+	-webkit-overflow-scrolling: touch;
 	@media #{$small} {
-		margin-top: 0;
+		padding-top: 0;
 	}
 }
 
